--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,15 @@ after_success:
   - docker push vmaldosan/multi-nginx
   - docker push vmaldosan/multi-server
   - docker push vmaldosan/multi-worker
+
+deploy:
+  provider: elasticbeanstalk
+  region: "eu-west-1"
+  app: "multi-docker"
+  env: "MultiDocker-env"
+  bucket_name: "elasticbeanstalk-eu-west-1-538312665280"
+  bucket_path: "docker-multi"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
